@@ -1,24 +1,27 @@
 package com.krish.automessaging.datamodel.pojo;
 
+import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
 import com.krish.automessaging.datamodel.pojo.es.PersistenceAudit;
 import lombok.*;
 
+import java.util.Arrays;
 import java.util.List;
 
-@Getter
+@JsonIgnoreProperties(ignoreUnknown = true)
+@EqualsAndHashCode(callSuper = true)
+@Data
 @Builder
-@AllArgsConstructor
-@ToString
-@EqualsAndHashCode
+@ToString(callSuper = true)
 public class User extends PersistenceAudit<User> {
     private String id;
     private String name;
+    private String username;
     private String password;
     private String email;
     private boolean disabled;
-    private final List<String> roles = List.of("USER");
+    private List<String> roles = Arrays.asList("USER");
     private String passwordResetKey;
     private String phone;
     private long loggedInTime = System.currentTimeMillis();
-    private boolean ttlEnabled;
+    private boolean ttlEnabled = true;
 }
